[package]
name = "crawlnicle"
version = "0.1.0"
edition = "2021"
default-run = "crawlnicle"
authors = ["Tyler Hallada <tyler@hallada.net>"]

[lib]
name = "lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi-to-html = "0.1"
anyhow = "1"
article_scraper = "2.0.0-alpha.0"
axum = { version = "0.6", features = ["form"] }
bytes = "1.4"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.3", features = ["derive", "env"] }
dotenvy = "0.15"
feed-rs = "1.3"
maud = { version = "0.25", features = ["axum"] }
notify = "6"
once_cell = "1.17"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
sqlx = { version = "0.7", features = [
  "runtime-tokio-native-tls",
  "postgres",
  "macros",
  "migrate",
  "chrono",
  "uuid",
] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.4"
tower-livereload = "0.8"
tower-http = { version = "0.4", features = ["trace", "fs"] }
tracing = { version = "0.1", features = ["valuable"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.3", features = ["serde"] }
url = "2.4"
validator = { version = "0.16", features = ["derive"] }
