[package]
name = "crawlnicle"
version = "0.1.0"
edition = "2021"
default-run = "crawlnicle"
authors = ["Tyler Hallada <tyler@hallada.net>"]

[lib]
name = "lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ammonia = "4"
ansi-to-html = "0.2"
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.7", features = ["form", "multipart", "query"] }
axum-client-ip = "0.6"
axum-extra = { version = "0.9", features = ["typed-header"] }
axum-login = "0.15"
base64 = "0.22"
bytes = "1.4"
# TODO: replace chrono with time
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive", "env"] }
console-subscriber = "0.2"
dotenvy = "0.15"
feed-rs = "1.3"
futures = "0.3"
headers = "0.4"
http = "1.0.0"
ipnetwork = "0.20"
lettre = { version = "0.11", features = ["builder"] }
# waiting for new maud release which will support axum v. 0.7+: https://github.com/lambda-fairy/maud/pull/401
maud = { git = "https://github.com/vidhanio/maud", branch = "patch-1", features = [
  "axum",
] }
notify = "6"
once_cell = "1.18"
opml = "1.1"
password-auth = "1.0"
readability = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_with = "3"
sqlx = { version = "0.7", features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "migrate",
  "chrono",
  "uuid",
  "ipnetwork",
] }
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower = "0.4"
tower-livereload = "0.9"
tower-http = { version = "0.5", features = ["trace", "fs"] }
tower-sessions = { version = "0.12", features = ["signed"] }
tower-sessions-redis-store = "0.12"
tracing = { version = "0.1", features = ["valuable", "attributes"] }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.4", features = ["serde"] }
url = "2.4"
validator = { version = "0.18", features = ["derive"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
